0.4.0
features/changes:
 * get configuration run and station list in the same file, delete all arguments
   when run Jaziku, now only argument is "-runfile" and this files contains all
   the necessary to run Jaziku.
 * adds parameters for maps options in runfile
 
bugfixes:


0.3.0
features/changes:
 * now you can run using internal files for independents variables, defining as 
   "default" in "file_I" section inside stations list file.
 * enable run with particular independent variable file
 * change period defined in argument as process period instead of common period,
   ATTENTION! this affects titles, namefiles and captions of all results
 * Result table csv file now write by lags
 * Deleted contingency table in results
 * Changed the resolution of analysis of trimesters to months and even days, now 
   Jaziku can read var D and I with data daily and can print results for 5, 10, 
   and 15 days, with these changes all result (graphics, tables, ...) are different
   depended if data as daily and how to print result (5,10,15 days) 
 * Now maps files (and maps, in the next release) for climate and forecasting
   are ordered and grouped based on analysis interval
 * Added 3 new variables independent (SSTA_CAR and AREA_WHWP) and one variable 
   dependent (RUNOFF)
 * Updated transform_data_stations script
 * Consistent data analysis for independent and dependent variable, 
   check the number of null values from all values inside the process period, 
   continue only if it have less than 15%
 * add two new arguments: --disable-consistent-data and --disable-graphics
 * set to default acuracy to 5 decimal point for print result

bugfixes:
 * bugfix the size data when set particular common period
 * fix TYPOS
 * fix when Jaziku detect language from system 
 * fix crash and memory overflow when open many file
 * check different cases to run data daily/monthly and analisis interval defined
 * fixed range interval for var I and different lags when data is daily and 